add new script to publish semantic point cloud to ros2

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+./vscode/
+.vscode/c_cpp_properties.json
+.gitignore
+.gitignore
+.vscode/settings.json
+semantic_pointcloud_output/*.npz
